--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "flowbite-react": "^0.10.2",
     "fontawesome": "^5.6.3",
+    "lucide-react": "^0.525.0",
     "mongoose": "^8.9.3",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
