--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "get-me-a-chai",
+  "name": "Patronick",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "date-fns": "^4.1.0",
     "flowbite-react": "^0.10.2",
     "fontawesome": "^5.6.3",
     "lucide-react": "^0.525.0",
@@ -23,6 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-masonry-css": "^1.0.16",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
